# AlgorithmInCpp

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/codeWars/kyu7/: All_Inclusive.cpp  All_Inclusive.hpp  Complete_The_Pattern_1.cpp  Complete_The_Pattern_1.hpp  Composing_squared_strings.cpp  Composing_squared_strings.hpp  Maximum_Length_Difference.cpp  Maximum_Length_Difference.hpp  Scaling_Squared_Strings.cpp  Scaling_Squared_Strings.hpp  Sum_of_a_sequence.cpp  Sum_of_a_sequence.hpp  Sum_of_two_lowest_positive_integers.cpp  Sum_of_two_lowest_positive_integers.hpp
src/codeWars/kyu8/: Evil_or_Odious.cpp  Evil_or_Odious.hpp  Find_nth_Digit_of_a_Number.cpp  Find_nth_Digit_of_a_Number.hpp  Finish_Guess_the_Number_Game.cpp  Finish_Guess_the_Number_Game.hpp  How_much_i_love_you.cpp  How_much_i_love_you.hpp  MakeUpperCase.cpp  MakeUpperCase.hpp
test/: CMakeLists.txt  main.cpp
test/codeWars/kyu7/: All_InclusiveTest.cpp  Composing_squared_stringsTest.cpp  Maximum_Length_DifferenceTest.cpp  Scaling_Squared_StringsTest.cpp  Sum_of_two_lowest_positive_integersTest.cpp
test/codeWars/kyu8/: Evil_or_OdiousTest.cpp  Find_nth_Digit_of_a_NumberTest.cpp  Finish_Guess_the_Number_GameTest.cpp  How_much_i_love_youTest.cpp  MakeUpperCaseTest.cpp
